# Embedding-Tutorial

./: .gitignore  README.md  pyproject.toml  req.txt
deeplearning/: dualEncoder.ipynb  rag.ipynb  req-pip.txt  req-poertry.txt  sentenceEmbedding.ipynb  tokenEmbeddings.ipynb
eval/: MilutinReport.ipynb  chatgpt.ipynb  eveluationTest.ipynb  squatTEstingScript.py
marqo/: sentenceTransformers.ipynb
notes/: courses  eval.txt  setup-windows.txt
