[tool.poetry]
name = "embedding-tutorial"
version = "0.1.0"
description = ""
authors = ["SelenaMilutin <selena.milutin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gensim = "^4.3.3"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
transformers = "^4.43.3"
torch = "^2.4.0"
pytorch-transformers = "^1.2.0"
sentence-transformers = {extras = ["train"], version = "^3.0.1"}
seaborn = "^0.13.2"
botocore = "^1.34.153"
boto3 = "^1.34.153"
datasets = "^2.20.0"
matplotlib = "^3.7.0"
jupyter = "^1.0.0"
accelerate = "^0.33.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
